add data export button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,27 @@
 	}
 	.fuzzy-linkograph {
 		margin-bottom: 2rem;
+		padding: 1rem;
+		border: 1px solid #eee;
+		border-radius: 4px;
 	}
 	svg {
 		border: 1px solid #aaa;
+	}
+	button {
+		background-color: #4CAF50;
+		border: none;
+		color: white;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 14px;
+		margin: 4px 2px;
+		cursor: pointer;
+		border-radius: 4px;
+	}
+	button:hover {
+		background-color: #45a049;
 	}
 	</style>
 </head>
