--- a/linkograph-tree.html
+++ b/linkograph-tree.html
@@ -11,16 +11,34 @@
             padding: 20px;
             background: #fff;
         }
-        .file-input {
+        .controls {
             position: fixed;
             top: 20px;
             left: 20px;
             z-index: 100;
+            background: white;
+            padding: 10px;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        select {
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+            font-size: 14px;
+            width: 200px;
+        }
+        select:hover {
+            border-color: #999;
         }
     </style>
 </head>
 <body>
-    <input type="file" id="fileInput" class="file-input" accept=".json">
+    <div class="controls">
+        <select id="fileSelect">
+            <option value="">Select a visualization...</option>
+        </select>
+    </div>
     <script src="linkograph-tree.js"></script>
 </body>
 </html> 
