--- a/linkograph-tree.html
+++ b/linkograph-tree.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkograph Visualization</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.2/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.10/dist/tweakpane.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -30,6 +31,10 @@
         }
         select:hover {
             border-color: #999;
+        }
+        /* Add styles for the parameter panel */
+        .tp-dfwv {
+            width: 300px !important;
         }
     </style>
 </head>
